test/sema/trait_objects/no_coercion_on_out_param.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
trait A {}

struct S {
  impl A;
}

fn foo(x: &*impl A) {}

fn main() {
  mut s = gc(S{});

  // CHECK: [[# @LINE + 1 ]]:7: error: cannot unify '&*S' with '&*impl A'
  foo(&s);
}
